[gd_scene load_steps=45 format=3 uid="uid://bd85c8qitstlf"]

[ext_resource type="Script" uid="uid://c6r2hqm5tltry" path="res://src/samurai.gd" id="1_uwns0"]
[ext_resource type="Texture2D" uid="uid://vw8v4f8ut3rv" path="res://file/character/samurai/Dead.png" id="2_uwns0"]
[ext_resource type="Texture2D" uid="uid://dfi7kfdi4hev4" path="res://file/character/samurai/Idle.png" id="3_g3dtq"]
[ext_resource type="Texture2D" uid="uid://jih0v8s26r2h" path="res://file/character/samurai/Run.png" id="4_p1qwp"]
[ext_resource type="Texture2D" uid="uid://cqc5dniwc6mtm" path="res://file/character/samurai/Shot.png" id="5_g3dtq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_geeh1"]
size = Vector2(40, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_12phr"]
atlas = ExtResource("2_uwns0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpegb"]
atlas = ExtResource("2_uwns0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy1yp"]
atlas = ExtResource("2_uwns0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qthix"]
atlas = ExtResource("2_uwns0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_geeh1"]
atlas = ExtResource("2_uwns0")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebtc5"]
atlas = ExtResource("3_g3dtq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko3s2"]
atlas = ExtResource("3_g3dtq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppo6l"]
atlas = ExtResource("3_g3dtq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1f2p"]
atlas = ExtResource("3_g3dtq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh0v5"]
atlas = ExtResource("3_g3dtq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8o07"]
atlas = ExtResource("3_g3dtq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrefi"]
atlas = ExtResource("3_g3dtq")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ws0j"]
atlas = ExtResource("3_g3dtq")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_337u5"]
atlas = ExtResource("3_g3dtq")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i0lm"]
atlas = ExtResource("4_p1qwp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_miqu0"]
atlas = ExtResource("4_p1qwp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ktps"]
atlas = ExtResource("4_p1qwp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_avvbs"]
atlas = ExtResource("4_p1qwp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1833o"]
atlas = ExtResource("4_p1qwp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nt74"]
atlas = ExtResource("4_p1qwp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8br1f"]
atlas = ExtResource("4_p1qwp")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr4kg"]
atlas = ExtResource("4_p1qwp")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3dtq"]
atlas = ExtResource("5_g3dtq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1qwp"]
atlas = ExtResource("5_g3dtq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba7e2"]
atlas = ExtResource("5_g3dtq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_epmev"]
atlas = ExtResource("5_g3dtq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_adup8"]
atlas = ExtResource("5_g3dtq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ree"]
atlas = ExtResource("5_g3dtq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8cr5"]
atlas = ExtResource("5_g3dtq")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mind6"]
atlas = ExtResource("5_g3dtq")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_axi82"]
atlas = ExtResource("5_g3dtq")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uqoi"]
atlas = ExtResource("5_g3dtq")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkn0u"]
atlas = ExtResource("5_g3dtq")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqsuw"]
atlas = ExtResource("5_g3dtq")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvx3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12phr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpegb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy1yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qthix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geeh1")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebtc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko3s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppo6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1f2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh0v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8o07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrefi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ws0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_337u5")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i0lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miqu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ktps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avvbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1833o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nt74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8br1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr4kg")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3dtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1qwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba7e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epmev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adup8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ree")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8cr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mind6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axi82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uqoi")
}, {
"duration": 2.99,
"texture": SubResource("AtlasTexture_qkn0u")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_lqsuw")
}],
"loop": false,
"name": &"shot",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggppv"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3rta"]
bg_color = Color(0.3285419, 0.68161446, 0.51560247, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xip1"]
size = Vector2(530, 60)

[node name="Samurai" type="Node2D"]
script = ExtResource("1_uwns0")
_animations_path = NodePath("UnitArea/Animations")
wait_attack_timer_path = NodePath("UnitArea/WaitAttackTimer")
is_player = true
_unit_area_path = NodePath("UnitArea")
_unit_collision_path = NodePath("UnitArea/CollisionShape2D")
_attack_area_path = NodePath("AttackArea")
_attack_collision_path = NodePath("AttackArea/CollisionShape2D")
metadata/_custom_type_script = "uid://b1aemje2io0qa"

[node name="UnitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnitArea"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_geeh1")

[node name="Animations" type="AnimatedSprite2D" parent="UnitArea"]
position = Vector2(-64, -100)
sprite_frames = SubResource("SpriteFrames_wvx3n")
animation = &"idle"
centered = false

[node name="WaitAttackTimer" type="Timer" parent="UnitArea"]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="UnitArea"]
offset_top = -57.0
offset_right = 45.0
offset_bottom = -52.0
theme_override_styles/background = SubResource("StyleBoxFlat_ggppv")
theme_override_styles/fill = SubResource("StyleBoxFlat_g3rta")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(285, -2)
shape = SubResource("RectangleShape2D_2xip1")

[node name="ArrowSpawn" type="Node2D" parent="."]
position = Vector2(20, -25)

[connection signal="animation_changed" from="UnitArea/Animations" to="UnitArea" method="_on_animations_animation_changed"]
[connection signal="animation_finished" from="UnitArea/Animations" to="UnitArea" method="_on_animations_animation_finished"]
